style: fix text alignment

--- a/packages/trader/src/sass/app/modules/trading.scss
+++ b/packages/trader/src/sass/app/modules/trading.scss
@@ -388,7 +388,7 @@
             border-radius: 0 $BORDER_RADIUS $BORDER_RADIUS 0;
             background: none;
             border: none;
-            padding-bottom: 0.2rem;
+            padding: 0 0 0.2rem;
 
             &.input--error {
                 border: none !important;
